FIX: style.css - properly align footer elements, resize footer border, update anchor text size and color

--- a/styles/style.css
+++ b/styles/style.css
@@ -74,5 +74,15 @@ footer {
     bottom: 0;
     height: 40px;
     background-color: #f2f2f2;
-    border-top: 2px solid #e4e4e4;
+    border-top: 1px solid #e4e4e4;
+}
+
+footer ul {
+    margin: 0px 16.5px;
+}
+
+footer ul li a {
+    font-size: 14px;
+    color: #5f6368;
+    padding: 12px 13.5px;
 }
